--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "dotenv": "^10.0.0",
+    "mapbox-gl": "^2.4.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-leaflet": "^3.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
