--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^10.0.0",
     "mapbox-gl": "^2.4.1",
     "react": "^17.0.2",
+    "react-anime": "^4.0.4",
     "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
