--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-anime": "^4.0.4",
     "react-bootstrap": "^2.0.0-beta.5",
+    "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
     "react-icons": "^4.2.0",
