--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^10.0.0",
     "mapbox-gl": "^2.4.1",
     "react": "^17.0.2",
+    "react-animate-on-scroll": "^2.1.5",
     "react-anime": "^4.0.4",
     "react-bootstrap": "^2.0.0-beta.5",
     "react-bootstrap-sweetalert": "^5.2.0",
@@ -20,8 +21,10 @@
     "react-dotenv": "^0.1.3",
     "react-icons": "^4.2.0",
     "react-leaflet": "^3.2.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
