--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "dotenv": "^10.0.0",
+    "google-maps-react": "^2.0.6",
+    "kraken": "^0.4.0",
     "mapbox-gl": "^2.4.1",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
@@ -19,11 +21,13 @@
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^4.2.0",
     "react-leaflet": "^3.2.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recompose": "^0.30.0",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.2"
   },
